--- a/CBI/wip-anaconda3-py39/module.lua.tmpl
+++ b/CBI/wip-anaconda3-py39/module.lua.tmpl
@@ -9,7 +9,7 @@ local version = myModuleVersion()
 version = string.gsub(version, "^[.]", "") -- for hidden modules
 whatis("Version: " .. version)
 whatis("Keywords: files, utility")
-whatis("URL: https://docs.conda.io/en/latest/ (docs), https://www.anaconda.com/products/distribution (releases), https://github.com/conda/conda/blob/master/CHANGELOG.md (changelog), https://github.com/conda/conda (source code)")
+whatis("URL: https://docs.conda.io/en/latest/ (documentation), https://www.anaconda.com/products/distribution (releases), https://github.com/conda/conda/blob/master/CHANGELOG.md (changelog), https://github.com/conda/conda (source code)")
 whatis([[
 Description: Anaconda is a free installer for conda. It includes conda, Python, and 1,500 scientific packages.
 Examples: `conda --version`, `conda create --name=myenv`, `conda env list`, `conda activate myenv`, `conda info`, and `conda deactive`.
