--- a/CBI/wip-bash/module.lua.tmpl
+++ b/CBI/wip-bash/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: files, utility")
-whatis("URL: https://www.gnu.org/software/bash/, https://www.gnu.org/software/bash/manual/bash.html (docs), https://git.savannah.gnu.org/cgit/bash.git/tree/?h=devel (changelog), https://ftp.gnu.org/gnu/bash/ (download)")
+whatis("URL: https://www.gnu.org/software/bash/, https://www.gnu.org/software/bash/manual/bash.html (documentation), https://git.savannah.gnu.org/cgit/bash.git/tree/?h=devel (changelog), https://ftp.gnu.org/gnu/bash/ (download)")
 whatis([[
 Description: Bash is the GNU Project's shell—the Bourne Again SHell. This is an sh-compatible shell that incorporates useful features from the Korn shell (ksh) and the C shell (csh). It is intended to conform to the IEEE POSIX P1003.2/ISO 9945.2 Shell and Tools standard. It offers functional improvements over sh for both programming and interactive use. In addition, most sh scripts can be run by Bash without modification.
 Examples: `bash --version`, `bash --help`, and `bash`.
