--- a/CBI/markdownlint-cli/module.lua.tmpl
+++ b/CBI/markdownlint-cli/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: cli, utility")
-whatis("URL: https://github.com/igorshubovych/markdownlint-cli (docs), https://github.com/igorshubovych/markdownlint-cli/releases/ (releases), https://github.com/igorshubovych/markdownlint-cli (source code)")
+whatis("URL: https://github.com/igorshubovych/markdownlint-cli (documentation), https://github.com/igorshubovych/markdownlint-cli/releases/ (releases), https://github.com/igorshubovych/markdownlint-cli (source code)")
 whatis([[
 Description: 
 Examples: `markdownlint --version`, `markdownlint --help`, `markdownlint -- *.md`.
