--- a/CBI/wip-jupyternotebook/module.lua.tmpl
+++ b/CBI/wip-jupyternotebook/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: programming, python")
-whatis("URL: https://jupyter.org/, https://jupyter-notebook.readthedocs.io/en/stable/ (docs), https://jupyter-notebook.readthedocs.io/en/stable/changelog.html (changelog), https://github.com/jupyter/ (source code)")
+whatis("URL: https://jupyter.org/, https://jupyter-notebook.readthedocs.io/en/stable/ (documentation), https://jupyter-notebook.readthedocs.io/en/stable/changelog.html (changelog), https://github.com/jupyter/ (source code)")
 whatis([[
 Description: 
 Examples: `jupyter --help`, `jupyter --version`, `jupyter lab`, and `man ipython`.
