--- a/CBI/wip-sioyek/module.lua.tmpl
+++ b/CBI/wip-sioyek/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: utility, viewer, reader, pdf")
-whatis("URL: https://sioyek.info/, https://sioyek-documentation.readthedocs.io/en/latest/ (documentation) https://github.com/ahrm/sioyek (source code), https://github.com/ahrm/sioyek/releases (changelog)")
+whatis("URL: https://sioyek.info/, https://sioyek-documentation.readthedocs.io/en/latest/ (documentation), https://github.com/ahrm/sioyek (source code), https://github.com/ahrm/sioyek/releases (changelog)")
 whatis([[
 Description: 
 Examples: `sioyek --version`, `sioyek --help`, `sioyek` (quick reference manual).
