--- a/CBI/miniconda3-py39/module.lua.tmpl
+++ b/CBI/miniconda3-py39/module.lua.tmpl
@@ -13,7 +13,7 @@ whatis("URL: https://docs.conda.io/en/latest/, https://docs.conda.io/en/latest/m
 whatis([[
 Description: Miniconda is a free minimal installer for conda. It is a small, bootstrap version of Anaconda that includes only conda, Python, the packages they depend on, and a small number of other useful packages, including pip, zlib and a few others.
 Examples: `conda --version`, `conda create --name=myenv`, `conda env list`, `conda activate myenv`, `conda info`, and `conda deactive`.
-Warning: For now, this module only work in Bash. Also, do _not_ do `conda init`. If you do by mistake, please undo by `conda init --reverse`.
+Warning: For now, this module works only in Bash. Also, do _not_ do `conda init`. If you do this by mistake, please undo by `conda init --reverse`.
 ]])
 
 
