bowtie/bowtie2: HTTP -> HTTPS

--- a/CBI/bowtie/module.lua.tmpl
+++ b/CBI/bowtie/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: http://bowtie-bio.sourceforge.net/index.shtml, http://bowtie-bio.sourceforge.net/index.shtml (changelog), https://github.com/BenLangmead/bowtie (source code)")
+whatis("URL: https://bowtie-bio.sourceforge.net/index.shtml, https://bowtie-bio.sourceforge.net/index.shtml (changelog), https://github.com/BenLangmead/bowtie (source code)")
 whatis([[
 Description: Bowtie is an ultrafast, memory-efficient short read aligner.
 Examples: `bowtie --version` and `ls $BOWTIE_HOME/{genomes,indexes}`
