restic: update module URLs

--- a/CBI/restic/module.lua.tmpl
+++ b/CBI/restic/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: cli, backup, files")
-whatis("URL: https://restic.net, https://restic.readthedocs.io/en/latest/, https://github.com/restic/restic")
+whatis("URL: https://restic.net, https://restic.readthedocs.io/en/latest/ (documentation), https://github.com/restic/restic/releases (change log), https://github.com/restic/restic (source code)")
 whatis([[
 Description: restic is a backup program that is fast, efficient and secure. It supports the three major operating systems (Linux, macOS, Windows) and a few smaller ones (FreeBSD, OpenBSD).
 Examples: `restic --help` and `restic version`.
