--- a/CBI/snpeff/module.lua.tmpl
+++ b/CBI/snpeff/module.lua.tmpl
@@ -17,7 +17,8 @@ local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 if (version >= "5.1") then
-  depends_on("openjdk/17")
+  try_load("openjdk/17")
+  try_load("openjdk/18")
 end
 
 pushenv("SNPEFF_HOME", home)
