htstools: add more examples

--- a/CBI/htstools/module.lua.tmpl
+++ b/CBI/htstools/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing")
 whatis("URL: https://github.com/mskcc/htstools, https://github.com/mskcc/htstools/releases (changelog)")
 whatis([[
 Description: Contains three tools (dnafrags, ppflag-fixer, snp-pileup) written by Alex Studer to process bam files for downstream copy number analysis.
-Examples: `snp-pileup --help`.
+Examples: `snp-pileup --help`, `dnafrags --help`, `ppflag-fixer --help`.
 ]])
 
 depends_on("htslib")
