--- a/CBI/plink/module.lua.tmpl
+++ b/CBI/plink/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: genomics")
 whatis("URL: https://www.cog-genomics.org/plink/")
 whatis([[
 Description: PLINK is a free, open-source whole genome association analysis toolset, designed to perform a range of basic, large-scale analyses in a computationally efficient manner. The focus of PLINK is purely on analysis of genotype/phenotype data, so there is no support for steps prior to this (e.g. study design and planning, generating genotype or CNV calls from raw data).
-Examples: `plink --help`.
+Examples: `plink --help` and `plink --version`.
 ]])
 
 -- Local variables
