--- a/CBI/plink2/module.lua.tmpl
+++ b/CBI/plink2/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: genomics")
 whatis("URL: https://www.cog-genomics.org/plink/2.0/, https://www.cog-genomics.org/plink/2.0/#recent (changelog), https://github.com/chrchang/plink-ng (source code)")
 whatis([[
 Description: PLINK is a free, open-source whole genome association analysis toolset, designed to perform a range of basic, large-scale analyses in a computationally efficient manner. The focus of PLINK is purely on analysis of genotype/phenotype data, so there is no support for steps prior to this (e.g. study design and planning, generating genotype or CNV calls from raw data).
-Examples: `plink2 --help`.
+Examples: `plink2 --help` and `plink2 --version`.
 ]])
 
 -- Local variables
