igvtools: add example

--- a/CBI/igvtools/module.lua.tmpl
+++ b/CBI/igvtools/module.lua.tmpl
@@ -10,7 +10,7 @@ whatis("Keywords: sequencing")
 whatis("URL: https://software.broadinstitute.org/software/igv/igvtools, https://software.broadinstitute.org/software/igv/2.12.x#LatestVersion (changelog), https://github.com/igvteam/igv/ (source code)")
 whatis([[
 Description: The igvtools utility provides a set of tools for pre-processing data files.
-Examples: `igvtools help`.
+Examples: `igvtools version` and `igvtools help`.
 Note: `igvtools` moved to IGV as of IGV (>= 2.5.0).
 ]])
 
