jq: add version example

--- a/CBI/jq/module.lua.tmpl
+++ b/CBI/jq/module.lua.tmpl
@@ -10,7 +10,7 @@ whatis("Keywords: utility, cli")
 whatis("URL: https://github.com/stedolan/jq, https://github.com/stedolan/jq/blob/master/NEWS (changelog), https://stedolan.github.io/jq (documentation)")
 whatis([[
 Description: jq is a lightweight and flexible command-line JSON processor.
-Examples: `jq --help`, `cat in.json | jq .`, and `man jq`
+Examples: `jq --help`, `jq --version`, `cat in.json | jq .`, and `man jq`
 Warning: Only the most recent version of this software will be kept.
 ]])
 
