--- a/CBI/pindel/module.lua.tmpl
+++ b/CBI/pindel/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing")
 whatis("URL: https://www.sanger.ac.uk/science/tools/pindel, https://github.com/genome/pindel/tags (changelog), https://github.com/genome/pindel (source code)")
 whatis([[
 Description: Pindel can detect breakpoints of large deletions, medium sized insertions, inversions, tandem duplications and other structural variants at single-based resolution from next-gen sequence data. It uses a pattern growth approach to identify the breakpoints of these variants from paired-end short reads.
-Examples: `pindel`.
+Examples: `pindel` and `pindel --help`.
 ]])
 
 if (version == "0.2.4t") then
