bashdb: incorrect PATH. However there are still errors when used

--- a/CBI/bashdb/module.lua.tmpl
+++ b/CBI/bashdb/module.lua.tmpl
@@ -15,6 +15,6 @@ Examples: `bashdb --help`, `bashdb --version`.
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
-prepend_path("PATH", pathJoin(home, "bin"))
+prepend_path("PATH", home)
 prepend_path("MANPATH", pathJoin(home, "share", "man"))
 prepend_path("LD_LIBRARY_PATH", pathJoin(home, "lib"))
