--- a/CBI/snpeff/module.lua.tmpl
+++ b/CBI/snpeff/module.lua.tmpl
@@ -27,16 +27,22 @@ pushenv("SNPEFF_HOME", home)
 
 local jarfile = pathJoin(home, "snpEff", "snpEff.jar")
 pushenv("SNPEFF", jarfile)
-set_alias("snpEff", "java -jar \"$SNPEFF_HOME/snpEff/snpEff.jar\"")
+local bash = 'java -jar "$SNPEFF_HOME/snpEff/snpEff.jar" "$@"'
+local csh  = 'java -jar "$SNPEFF_HOME/snpEff/snpEff.jar" $*'
+set_shell_function("snpEff", bash, csh)
 
 local jarfile = pathJoin(home, "snpEff", "SnpSift.jar")
 pushenv("SNPSIFT", jarfile)
-set_alias("SnpSift", "java -jar \"$SNPEFF_HOME/snpEff/SnpSift.jar\"")
+local bash = 'java -jar "$SNPEFF_HOME/snpEff/SnpSift.jar" "$@"'
+local csh  = 'java -jar "$SNPEFF_HOME/snpEff/SnpSift.jar" $*'
+set_shell_function("SnpSift", bash, csh)
 
 local jarfile = pathJoin(home, "clinEff", "ClinEff.jar")
 if isFile(jarfile) then
   pushenv("CLINEFF", jarfile)
-  set_alias("ClinEff", "java -jar \"$SNPEFF_HOME/ClinEff/ClinEff.jar\"")
+  local bash = 'java -jar "$SNPEFF_HOME/ClinEff/ClinEff.jar" "$@"'
+  local csh  = 'java -jar "$SNPEFF_HOME/ClinEff/ClinEff.jar" $*'
+  set_shell_function("ClinEff", bash, csh)
 end
 
 -- Tweak Java for the current environment
