Tweak module text that still refer to "aliases"

--- a/CBI/varscan/module.lua.tmpl
+++ b/CBI/varscan/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: high-throughput sequencing")
 whatis("URL: https://dkoboldt.github.io/varscan/, https://github.com/dkoboldt/varscan/releases (changelog), https://github.com/dkoboldt/varscan (source code)")
 whatis([[
 Description: VarScan is a platform-independent mutation caller for targeted, exome, and whole-genome resequencing data generated on Illumina, SOLiD, Life/PGM, Roche/454, and similar instruments.
-Examples: `varscan`, which is an alias to `java -jar $VARSCAN_HOME/VarScan.jar`.
+Examples: `varscan`, which is short for `java -jar $VARSCAN_HOME/VarScan.jar`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
