--- a/CBI/scl-rh-ruby/module.lua.tmpl
+++ b/CBI/scl-rh-ruby/module.lua.tmpl
@@ -12,7 +12,13 @@ whatis("URL: https://www.softwarecollections.org/en/scls/rhscl/" .. scl_name .. 
 whatis([[
 Description: Enables the CentOS Software Collection (SCL) `" .. scl_name .. "` in the current environment.  This is an alternative to calling `source scl_source enable " .. scl_name .. "`, which is an approach that is not of ficially supported by RedHat/CentOS.
 Examples: `irb --help`, `ruby --help`, `ruby script.rb`.
+Requirement: This module is only available on CentOS 7.
 ]])
+
+-- This module is only available on CentOS 7
+if os.getenv("CBI_LINUX") ~= nil and os.getenv("CBI_LINUX") ~= "centos7" then
+  LmodError("Module '" .. myModuleFullName() .. "' is only available on CentOS 7 machine, but not on host '" .. os.getenv("HOSTNAME") .. "', which runs '" .. cbi_linux .. "'")
+end
 
 local home = "/opt/rh/" .. scl_name
 
