scl-rh-python: error if not on CentOS 7

--- a/CBI/scl-rh-ruby/module.lua.tmpl
+++ b/CBI/scl-rh-ruby/module.lua.tmpl
@@ -12,7 +12,7 @@ whatis("URL: https://www.softwarecollections.org/en/scls/rhscl/" .. scl_name .. 
 whatis([[
 Description: Enables the CentOS Software Collection (SCL) `" .. scl_name .. "` in the current environment.  This is an alternative to calling `source scl_source enable " .. scl_name .. "`, which is an approach that is not of ficially supported by RedHat/CentOS.
 Examples: `irb --help`, `ruby --help`, `ruby script.rb`.
-Requirement: This module is only available on CentOS 7.
+Requirement: CentOS 7.
 ]])
 
 -- This module is only available on CentOS 7
