--- a/CBI/scl-rh-python/module.lua.tmpl
+++ b/CBI/scl-rh-python/module.lua.tmpl
@@ -13,7 +13,14 @@ whatis([[
 Description: Enables the CentOS Software Collection (SCL) `rh-python<version>` in the current environment.  This is an alternative to calling `source scl_source enable rh-python<version>`, which is not officially supported by RedHat/CentOS.
 Examples: `python --version`, and `pip --version`.
 Warning: Older versions may be removed in the future.
+Requirement: CentOS 7.
 ]])
+
+-- This module is only available on CentOS 7
+if os.getenv("CBI_LINUX") ~= "centos7" then
+  LmodError("Module '" .. myModuleFullName() .. "' is only available on CentOS 7 machines, but not on host '" .. os.getenv("HOSTNAME") .. "', which runs '" ..
+ os.getenv("CBI_LINUX") .. "'")
+end
 
 local home = "/opt/rh/rh-python" .. version
 if not isDir(home) then
