--- a/CBI/emacs/module.lua.tmpl
+++ b/CBI/emacs/module.lua.tmpl
@@ -14,6 +14,12 @@ Warning: Only the most recent version of this software will be kept.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
+
+-- Specific to the Linux distribution?
+if string.match(myFileName(), "-" .. os.getenv("CBI_LINUX") .. "/") then
+  root = root .. "-" .. os.getenv("CBI_LINUX")
+end
+
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
