--- a/CBI/mc/module.lua.tmpl
+++ b/CBI/mc/module.lua.tmpl
@@ -14,6 +14,8 @@ Warning: Only the most recent version of this software will be kept.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
+
+-- Specific to the Linux distribution?
 if string.match(myFileName(), "-" .. os.getenv("CBI_LINUX") .. "/") then
   root = root .. "-" .. os.getenv("CBI_LINUX")
 end
