expect: distro specific

--- a/CBI/expect/module.lua.tmpl
+++ b/CBI/expect/module.lua.tmpl
@@ -13,6 +13,12 @@ Examples: `expect -version`, and `man expect`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
+
+-- Specific to the Linux distribution?
+if string.match(myFileName(), "/[.]" .. os.getenv("CBI_LINUX") .. "/") then
+  root = pathJoin(root, "." .. os.getenv("CBI_LINUX"))
+end
+
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
