Use _ instead of . as a prefix for distro-specific folders, because when using . Lmod's 'spider' tool would consider all those modules as hidden

--- a/CBI/expect/module.lua.tmpl
+++ b/CBI/expect/module.lua.tmpl
@@ -15,8 +15,8 @@ Examples: `expect -version`, and `man expect`.
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 
 -- Specific to the Linux distribution?
-if string.match(myFileName(), "/[.]" .. os.getenv("CBI_LINUX") .. "/") then
-  root = pathJoin(root, "." .. os.getenv("CBI_LINUX"))
+if string.match(myFileName(), "/_" .. os.getenv("CBI_LINUX") .. "/") then
+  root = pathJoin(root, "_" .. os.getenv("CBI_LINUX"))
 end
 
 local home = pathJoin(root, name .. "-" .. version)
