--- a/CBI/mutect/module.lua.tmpl
+++ b/CBI/mutect/module.lua.tmpl
@@ -10,6 +10,7 @@ whatis("URL: https://software.broadinstitute.org/cancer/cga/mutect, https://gith
 whatis([[
 Description: MuTect is a method developed at the Broad Institute for the reliable and accurate identification of somatic point mutations in next generation sequencing data of cancer genomes.
 Examples: `mutect`, which is short for `java -Xmx2g -jar "$MUTECT_JAR"`.
+Requirements: MuTect (<= 1.1) requires Java v1.7 and will not work with any other Java versions.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
