gistic2: Can't get it to work on Rocky 8 (requires libncurses.so.5, but only libncurses.so.6 is available)

--- a/CBI/gistic2/module.lua.tmpl
+++ b/CBI/gistic2/module.lua.tmpl
@@ -10,6 +10,7 @@ whatis("URL: https://software.broadinstitute.org/cancer/cga/gistic, https://gith
 whatis([[
 Description: GISTIC2.0 facilitates sensitive and confident localization of the targets of focal somatic copy-number alteration in human cancers.
 Examples: `gistic2`.
+Requirements: CentOS 7.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
