star: now only installing the static binaries; avoid irrelevant ldd-check errors from dynamic binaries that were never used

--- a/CBI/star/module.lua.tmpl
+++ b/CBI/star/module.lua.tmpl
@@ -14,4 +14,4 @@ local name = "STAR"
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
-prepend_path("PATH", pathJoin(home, "bin", "Linux_x86_64_static"))
+prepend_path("PATH", pathJoin(home, "bin"))
